--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
-title: "Will Russell"
-email: fellowship@mlh.io
+title: "Han Jumashov"
+email: hj259573@my.ncwc.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" 
-url: "/portfolio-template" 
-twitter_username: mlhacks
-github_username:  mlh-fellowship
-
+url: "htpps://hj-3400.github.io/" 
+LinkedIn_username: Han Jumashov
+github_username:  hj-3400
 sass:
   sass_dir: _sass
 
