--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" 
-url: "htpps://hj-3400.github.io/" 
+url: "https://hj-3400.github.io/" 
 LinkedIn_username: Han Jumashov
 github_username:  hj-3400
 sass:
