--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- role: Open Source Fellow
-  company: MLH Fellowship
-  dates: Summer 2020
-  logo: fellowship.svg
+- role: Supplemental Instructor
+  company: North Carolina Wesleyan College
+  dates: September 2020 - Present
+  logo: ncwclogo.png
